src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__chat_small_running_h1.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
