src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__chat_small_running_h3.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"› Ask Adam to do anything               "
"                                        "
