src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: src/tui/app/src/chatwidget/tests.rs
assertion_line: 6627
expression: term.backend().vt100().screen().contents()
---



























• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• Exploring
  └ Search Change Approved
    Read diff_render.rs

• Investigating rendering code (0s • esc to interrupt)


› Summarize recent commits

  gpt-5.3-codex · 100% left · ~/Workspace/adam/src/tui/app
